asg3/yyparse.output
Nonterminals useless in grammar

   hfunc
   identList


Terminals unused in grammar

   TOK_CHAR
   TOK_BR
   TOK_NOT
   TOK_ROOT
   TOK_BLOCK
   TOK_CALL
   TOK_IFELSE
   TOK_INITDECL
   TOK_NEWARRAY
   TOK_TYPEID
   TOK_FIELD
   TOK_NEWSTR
   TOK_FUNCTION
   TOK_PROTOTYPE
   TOK_DECLID


Rules useless in grammar

   86 hfunc: hfunc ')'
   87      | hfunc param
   88      | identdec

   89 identList: identList ',' identdec
   90          | identdec


State 2 conflicts: 3 shift/reduce
State 11 conflicts: 3 shift/reduce
State 19 conflicts: 9 shift/reduce
State 20 conflicts: 9 shift/reduce
State 21 conflicts: 2 shift/reduce
State 22 conflicts: 3 shift/reduce
State 37 conflicts: 3 shift/reduce
State 41 conflicts: 11 shift/reduce
State 46 conflicts: 2 shift/reduce
State 48 conflicts: 2 shift/reduce
State 54 conflicts: 1 reduce/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 68 conflicts: 18 shift/reduce, 15 reduce/reduce
State 71 conflicts: 3 shift/reduce
State 76 conflicts: 9 shift/reduce
State 77 conflicts: 9 shift/reduce
State 78 conflicts: 9 shift/reduce
State 79 conflicts: 9 shift/reduce
State 80 conflicts: 9 shift/reduce
State 81 conflicts: 9 shift/reduce
State 82 conflicts: 9 shift/reduce
State 83 conflicts: 9 shift/reduce
State 84 conflicts: 9 shift/reduce
State 85 conflicts: 9 shift/reduce
State 86 conflicts: 9 shift/reduce
State 88 conflicts: 9 shift/reduce
State 89 conflicts: 2 shift/reduce
State 94 conflicts: 14 shift/reduce
State 96 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 117 conflicts: 2 shift/reduce
State 118 conflicts: 2 shift/reduce
State 119 conflicts: 2 shift/reduce
State 120 conflicts: 2 shift/reduce
State 121 conflicts: 2 shift/reduce
State 122 conflicts: 2 shift/reduce
State 123 conflicts: 2 shift/reduce
State 124 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 128 conflicts: 14 shift/reduce
State 130 conflicts: 3 shift/reduce
State 132 conflicts: 3 shift/reduce
State 136 conflicts: 2 shift/reduce
State 141 conflicts: 3 shift/reduce
State 146 conflicts: 3 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program structdef
    3        | program globaldecl
    4        | program function
    5        | program statement
    6        | program error '{'
    7        | program error ';'
    8        | %empty

    9 structdef: struc '}'

   10 struc: struc fielddecl ';'
   11      | TOK_STRUCT TOK_IDENT '{'

   12 fielddecl: basetype TOK_IDENT
   13          | basetype TOK_ARRAY TOK_IDENT

   14 globaldecl: identdec TOK_VARDECL constant ';'

   15 function: func fnbody '}'
   16         | func ';'

   17 func: func ')'
   18     | func param
   19     | identdec

   20 param: param ',' identdec
   21      | TOK_PARAM identdec
   22      | TOK_PARAM

   23 identdec: basetype TOK_ARRAY TOK_IDENT
   24         | basetype TOK_IDENT

   25 fnbody: fnbody statement
   26       | fnbody localdecl
   27       | '{' statement
   28       | '{' localdecl
   29       | '{'

   30 basetype: TOK_VOID
   31         | TOK_INT
   32         | TOK_STRING
   33         | TOK_IDENT

   34 localdecl: identdec TOK_VARDECL expr ';'

   35 ifelse: TOK_IF TOK_PARAM expr ')' statement TOK_ELSE statement
   36       | TOK_IF TOK_PARAM expr ')' statement
   37       | TOK_ELSE TOK_IF TOK_PARAM expr ')' statement

   38 expr: TOK_NEW allocation
   39     | binop
   40     | unop
   41     | call
   42     | '(' expr ')'
   43     | variable
   44     | constant

   45 binop: %empty
   46      | expr '=' expr
   47      | expr '+' expr
   48      | expr '-' expr
   49      | expr '*' expr
   50      | expr '/' expr
   51      | expr '%' expr
   52      | expr TOK_EQ expr
   53      | expr TOK_NE expr
   54      | expr TOK_LT expr
   55      | expr TOK_LE expr
   56      | expr TOK_GT expr
   57      | expr TOK_GE expr

   58 unop: '+' expr
   59     | '-' expr

   60 statement: block
   61          | while
   62          | ifelse
   63          | return
   64          | expr ';'
   65          | ';'

   66 block: blockHelp '}'

   67 blockHelp: blockHelp statement
   68          | '{' statement

   69 while: TOK_WHILE TOK_PARAM expr ')' statement

   70 return: TOK_RETURN ';'
   71       | TOK_RETURN expr ';'

   72 allocation: TOK_IDENT
   73           | TOK_STRING TOK_PARAM expr ')'
   74           | basetype '[' expr ']'

   75 call: funCall ')'

   76 funCall: funCall ','
   77        | funCall expr
   78        | TOK_IDENT TOK_PARAM

   79 variable: TOK_IDENT
   80         | expr '[' expr ']'
   81         | expr TOK_ARROW TOK_IDENT

   82 constant: TOK_INTCON
   83         | TOK_STRINGCON
   84         | TOK_CHARCON
   85         | TOK_NULL


Terminals, with rules where they appear

$end (0) 0
'%' (37) 51
'(' (40) 42
')' (41) 17 35 36 37 42 69 73 75
'*' (42) 49
'+' (43) 47 58
',' (44) 20 76
'-' (45) 48 59
'/' (47) 50
';' (59) 7 10 14 16 34 64 65 70 71
'=' (61) 46
'[' (91) 74 80
']' (93) 74 80
'{' (123) 6 11 27 28 29 68
'}' (125) 9 15 66
error (256) 6 7
TOK_VOID (258) 30
TOK_CHAR (259)
TOK_INT (260) 31
TOK_STRING (261) 32 73
TOK_IF (262) 35 36 37
TOK_ELSE (263) 35 37
TOK_WHILE (264) 69
TOK_RETURN (265) 70 71
TOK_STRUCT (266) 11
TOK_NULL (267) 85
TOK_NEW (268) 38
TOK_VARDECL (269) 14 34
TOK_ARRAY (270) 13 23
TOK_ARROW (271) 81
TOK_BR (272)
TOK_EQ (273) 52
TOK_NE (274) 53
TOK_LT (275) 54
TOK_LE (276) 55
TOK_GT (277) 56
TOK_GE (278) 57
TOK_NOT (279)
TOK_IDENT (280) 11 12 13 23 24 33 72 78 79 81
TOK_INTCON (281) 82
TOK_CHARCON (282) 84
TOK_STRINGCON (283) 83
TOK_ROOT (284)
TOK_BLOCK (285)
TOK_CALL (286)
TOK_IFELSE (287)
TOK_INITDECL (288)
TOK_POS (289)
TOK_NEG (290)
TOK_NEWARRAY (291)
TOK_TYPEID (292)
TOK_FIELD (293)
TOK_NEWSTR (294)
TOK_PARAM (295) 21 22 35 36 37 69 73 78
TOK_FUNCTION (296)
TOK_PROTOTYPE (297)
TOK_DECLID (298)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
start (59)
    on left: 1, on right: 0
program (60)
    on left: 2 3 4 5 6 7 8, on right: 1 2 3 4 5 6 7
structdef (61)
    on left: 9, on right: 2
struc (62)
    on left: 10 11, on right: 9 10
fielddecl (63)
    on left: 12 13, on right: 10
globaldecl (64)
    on left: 14, on right: 3
function (65)
    on left: 15 16, on right: 4
func (66)
    on left: 17 18 19, on right: 15 16 17 18
param (67)
    on left: 20 21 22, on right: 18 20
identdec (68)
    on left: 23 24, on right: 14 19 20 21 34
fnbody (69)
    on left: 25 26 27 28 29, on right: 15 25 26
basetype (70)
    on left: 30 31 32 33, on right: 12 13 23 24 74
localdecl (71)
    on left: 34, on right: 26 28
ifelse (72)
    on left: 35 36 37, on right: 62
expr (73)
    on left: 38 39 40 41 42 43 44, on right: 34 35 36 37 42 46 47 48
    49 50 51 52 53 54 55 56 57 58 59 64 69 71 73 74 77 80 81
binop (74)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57, on right: 39
unop (75)
    on left: 58 59, on right: 40
statement (76)
    on left: 60 61 62 63 64 65, on right: 5 25 27 35 36 37 67 68 69
block (77)
    on left: 66, on right: 60
blockHelp (78)
    on left: 67 68, on right: 66 67
while (79)
    on left: 69, on right: 61
return (80)
    on left: 70 71, on right: 63
allocation (81)
    on left: 72 73 74, on right: 38
call (82)
    on left: 75, on right: 41
funCall (83)
    on left: 76 77 78, on right: 75 76 77
variable (84)
    on left: 79 80 81, on right: 43
constant (85)
    on left: 82 83 84 85, on right: 14 44


State 0

    0 $accept: . start $end

    $default  reduce using rule 8 (program)

    start    go to state 1
    program  go to state 2


State 1

    0 $accept: start . $end

    $end  shift, and go to state 3


State 2

    1 start: program .
    2 program: program . structdef
    3        | program . globaldecl
    4        | program . function
    5        | program . statement
    6        | program . error '{'
    7        | program . error ';'

    error          shift, and go to state 4
    TOK_VOID       shift, and go to state 5
    TOK_INT        shift, and go to state 6
    TOK_STRING     shift, and go to state 7
    TOK_IF         shift, and go to state 8
    TOK_ELSE       shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_STRUCT     shift, and go to state 12
    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 15
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    '+'            shift, and go to state 19
    '-'            shift, and go to state 20
    '('            shift, and go to state 21
    '{'            shift, and go to state 22
    ';'            shift, and go to state 23

    $end       reduce using rule 1 (start)
    TOK_ARROW  reduce using rule 45 (binop)
    TOK_EQ     reduce using rule 45 (binop)
    TOK_NE     reduce using rule 45 (binop)
    TOK_LT     reduce using rule 45 (binop)
    TOK_LE     reduce using rule 45 (binop)
    TOK_GT     reduce using rule 45 (binop)
    TOK_GE     reduce using rule 45 (binop)
    '+'        [reduce using rule 45 (binop)]
    '-'        [reduce using rule 45 (binop)]
    '*'        reduce using rule 45 (binop)
    '/'        reduce using rule 45 (binop)
    '%'        reduce using rule 45 (binop)
    ';'        [reduce using rule 45 (binop)]
    '='        reduce using rule 45 (binop)
    '['        reduce using rule 45 (binop)

    structdef   go to state 24
    struc       go to state 25
    globaldecl  go to state 26
    function    go to state 27
    func        go to state 28
    identdec    go to state 29
    basetype    go to state 30
    ifelse      go to state 31
    expr        go to state 32
    binop       go to state 33
    unop        go to state 34
    statement   go to state 35
    block       go to state 36
    blockHelp   go to state 37
    while       go to state 38
    return      go to state 39
    call        go to state 40
    funCall     go to state 41
    variable    go to state 42
    constant    go to state 43


State 3

    0 $accept: start $end .

    $default  accept


State 4

    6 program: program error . '{'
    7        | program error . ';'

    '{'  shift, and go to state 44
    ';'  shift, and go to state 45


State 5

   30 basetype: TOK_VOID .

    $default  reduce using rule 30 (basetype)


State 6

   31 basetype: TOK_INT .

    $default  reduce using rule 31 (basetype)


State 7

   32 basetype: TOK_STRING .

    $default  reduce using rule 32 (basetype)


State 8

   35 ifelse: TOK_IF . TOK_PARAM expr ')' statement TOK_ELSE statement
   36       | TOK_IF . TOK_PARAM expr ')' statement

    TOK_PARAM  shift, and go to state 46


State 9

   37 ifelse: TOK_ELSE . TOK_IF TOK_PARAM expr ')' statement

    TOK_IF  shift, and go to state 47


State 10

   69 while: TOK_WHILE . TOK_PARAM expr ')' statement

    TOK_PARAM  shift, and go to state 48


State 11

   70 return: TOK_RETURN . ';'
   71       | TOK_RETURN . expr ';'

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 49
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    '+'            shift, and go to state 19
    '-'            shift, and go to state 20
    '('            shift, and go to state 21
    ';'            shift, and go to state 50

    '+'       [reduce using rule 45 (binop)]
    '-'       [reduce using rule 45 (binop)]
    ';'       [reduce using rule 45 (binop)]
    $default  reduce using rule 45 (binop)

    expr      go to state 51
    binop     go to state 33
    unop      go to state 34
    call      go to state 40
    funCall   go to state 41
    variable  go to state 42
    constant  go to state 43


State 12

   11 struc: TOK_STRUCT . TOK_IDENT '{'

    TOK_IDENT  shift, and go to state 52


State 13

   85 constant: TOK_NULL .

    $default  reduce using rule 85 (constant)


State 14

   38 expr: TOK_NEW . allocation

    TOK_VOID    shift, and go to state 5
    TOK_INT     shift, and go to state 6
    TOK_STRING  shift, and go to state 53
    TOK_IDENT   shift, and go to state 54

    basetype    go to state 55
    allocation  go to state 56


State 15

   33 basetype: TOK_IDENT .
   78 funCall: TOK_IDENT . TOK_PARAM
   79 variable: TOK_IDENT .

    TOK_PARAM  shift, and go to state 57

    TOK_ARRAY  reduce using rule 33 (basetype)
    TOK_IDENT  reduce using rule 33 (basetype)
    $default   reduce using rule 79 (variable)


State 16

   82 constant: TOK_INTCON .

    $default  reduce using rule 82 (constant)


State 17

   84 constant: TOK_CHARCON .

    $default  reduce using rule 84 (constant)


State 18

   83 constant: TOK_STRINGCON .

    $default  reduce using rule 83 (constant)


State 19

   58 unop: '+' . expr

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 49
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    '+'            shift, and go to state 19
    '-'            shift, and go to state 20
    '('            shift, and go to state 21

    TOK_NULL       [reduce using rule 45 (binop)]
    TOK_NEW        [reduce using rule 45 (binop)]
    TOK_IDENT      [reduce using rule 45 (binop)]
    TOK_INTCON     [reduce using rule 45 (binop)]
    TOK_CHARCON    [reduce using rule 45 (binop)]
    TOK_STRINGCON  [reduce using rule 45 (binop)]
    '+'            [reduce using rule 45 (binop)]
    '-'            [reduce using rule 45 (binop)]
    '('            [reduce using rule 45 (binop)]
    $default       reduce using rule 45 (binop)

    expr      go to state 58
    binop     go to state 33
    unop      go to state 34
    call      go to state 40
    funCall   go to state 41
    variable  go to state 42
    constant  go to state 43


State 20

   59 unop: '-' . expr

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 49
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    '+'            shift, and go to state 19
    '-'            shift, and go to state 20
    '('            shift, and go to state 21

    TOK_NULL       [reduce using rule 45 (binop)]
    TOK_NEW        [reduce using rule 45 (binop)]
    TOK_IDENT      [reduce using rule 45 (binop)]
    TOK_INTCON     [reduce using rule 45 (binop)]
    TOK_CHARCON    [reduce using rule 45 (binop)]
    TOK_STRINGCON  [reduce using rule 45 (binop)]
    '+'            [reduce using rule 45 (binop)]
    '-'            [reduce using rule 45 (binop)]
    '('            [reduce using rule 45 (binop)]
    $default       reduce using rule 45 (binop)

    expr      go to state 59
    binop     go to state 33
    unop      go to state 34
    call      go to state 40
    funCall   go to state 41
    variable  go to state 42
    constant  go to state 43


State 21

   42 expr: '(' . expr ')'

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 49
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    '+'            shift, and go to state 19
    '-'            shift, and go to state 20
    '('            shift, and go to state 21

    '+'       [reduce using rule 45 (binop)]
    '-'       [reduce using rule 45 (binop)]
    $default  reduce using rule 45 (binop)

    expr      go to state 60
    binop     go to state 33
    unop      go to state 34
    call      go to state 40
    funCall   go to state 41
    variable  go to state 42
    constant  go to state 43


State 22

   68 blockHelp: '{' . statement

    TOK_IF         shift, and go to state 8
    TOK_ELSE       shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 49
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    '+'            shift, and go to state 19
    '-'            shift, and go to state 20
    '('            shift, and go to state 21
    '{'            shift, and go to state 22
    ';'            shift, and go to state 23

    '+'       [reduce using rule 45 (binop)]
    '-'       [reduce using rule 45 (binop)]
    ';'       [reduce using rule 45 (binop)]
    $default  reduce using rule 45 (binop)

    ifelse     go to state 31
    expr       go to state 32
    binop      go to state 33
    unop       go to state 34
    statement  go to state 61
    block      go to state 36
    blockHelp  go to state 37
    while      go to state 38
    return     go to state 39
    call       go to state 40
    funCall    go to state 41
    variable   go to state 42
    constant   go to state 43


State 23

   65 statement: ';' .

    $default  reduce using rule 65 (statement)


State 24

    2 program: program structdef .

    $default  reduce using rule 2 (program)


State 25

    9 structdef: struc . '}'
   10 struc: struc . fielddecl ';'

    TOK_VOID    shift, and go to state 5
    TOK_INT     shift, and go to state 6
    TOK_STRING  shift, and go to state 7
    TOK_IDENT   shift, and go to state 62
    '}'         shift, and go to state 63

    fielddecl  go to state 64
    basetype   go to state 65


State 26

    3 program: program globaldecl .

    $default  reduce using rule 3 (program)


State 27

    4 program: program function .

    $default  reduce using rule 4 (program)


State 28

   15 function: func . fnbody '}'
   16         | func . ';'
   17 func: func . ')'
   18     | func . param

    TOK_PARAM  shift, and go to state 66
    ')'        shift, and go to state 67
    '{'        shift, and go to state 68
    ';'        shift, and go to state 69

    param   go to state 70
    fnbody  go to state 71


State 29

   14 globaldecl: identdec . TOK_VARDECL constant ';'
   19 func: identdec .

    TOK_VARDECL  shift, and go to state 72

    $default  reduce using rule 19 (func)


State 30

   23 identdec: basetype . TOK_ARRAY TOK_IDENT
   24         | basetype . TOK_IDENT

    TOK_ARRAY  shift, and go to state 73
    TOK_IDENT  shift, and go to state 74


State 31

   62 statement: ifelse .

    $default  reduce using rule 62 (statement)


State 32

   46 binop: expr . '=' expr
   47      | expr . '+' expr
   48      | expr . '-' expr
   49      | expr . '*' expr
   50      | expr . '/' expr
   51      | expr . '%' expr
   52      | expr . TOK_EQ expr
   53      | expr . TOK_NE expr
   54      | expr . TOK_LT expr
   55      | expr . TOK_LE expr
   56      | expr . TOK_GT expr
   57      | expr . TOK_GE expr
   64 statement: expr . ';'
   80 variable: expr . '[' expr ']'
   81         | expr . TOK_ARROW TOK_IDENT

    TOK_ARROW  shift, and go to state 75
    TOK_EQ     shift, and go to state 76
    TOK_NE     shift, and go to state 77
    TOK_LT     shift, and go to state 78
    TOK_LE     shift, and go to state 79
    TOK_GT     shift, and go to state 80
    TOK_GE     shift, and go to state 81
    '+'        shift, and go to state 82
    '-'        shift, and go to state 83
    '*'        shift, and go to state 84
    '/'        shift, and go to state 85
    '%'        shift, and go to state 86
    ';'        shift, and go to state 87
    '='        shift, and go to state 88
    '['        shift, and go to state 89


State 33

   39 expr: binop .

    $default  reduce using rule 39 (expr)


State 34

   40 expr: unop .

    $default  reduce using rule 40 (expr)


State 35

    5 program: program statement .

    $default  reduce using rule 5 (program)


State 36

   60 statement: block .

    $default  reduce using rule 60 (statement)


State 37

   66 block: blockHelp . '}'
   67 blockHelp: blockHelp . statement

    TOK_IF         shift, and go to state 8
    TOK_ELSE       shift, and go to state 9
    TOK_WHILE      shift, and go to state 10
    TOK_RETURN     shift, and go to state 11
    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 49
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    '+'            shift, and go to state 19
    '-'            shift, and go to state 20
    '('            shift, and go to state 21
    '{'            shift, and go to state 22
    ';'            shift, and go to state 23
    '}'            shift, and go to state 90

    '+'       [reduce using rule 45 (binop)]
    '-'       [reduce using rule 45 (binop)]
    ';'       [reduce using rule 45 (binop)]
    $default  reduce using rule 45 (binop)

    ifelse     go to state 31
    expr       go to state 32
    binop      go to state 33
    unop       go to state 34
    statement  go to state 91
    block      go to state 36
    blockHelp  go to state 37
    while      go to state 38
    return     go to state 39
    call       go to state 40
    funCall    go to state 41
    variable   go to state 42
    constant   go to state 43


State 38

   61 statement: while .

    $default  reduce using rule 61 (statement)


State 39

   63 statement: return .

    $default  reduce using rule 63 (statement)


State 40

   41 expr: call .

    $default  reduce using rule 41 (expr)


State 41

   75 call: funCall . ')'
   76 funCall: funCall . ','
   77        | funCall . expr

    TOK_NULL       shift, and go to state 13
    TOK_NEW        shift, and go to state 14
    TOK_IDENT      shift, and go to state 49
    TOK_INTCON     shift, and go to state 16
    TOK_CHARCON    shift, and go to state 17
    TOK_STRINGCON  shift, and go to state 18
    '+'            shift, and go to state 19
    '-'            shift, and go to state 20
    '('            shift, and go to state 21
    ')'            shift, and go to state 92
    ','            shift, and go to state 93

    TOK_NULL       [reduce using rule 45 (binop)]
    TOK_NEW        [reduce using rule 45 (binop)]
    TOK_IDENT      [reduce using rule 45 (binop)]
    TOK_INTCON     [reduce using rule 45 (binop)]
    TOK_CHARCON    [reduce using rule 45 (binop)]
    TOK_STRINGCON  [reduce using rule 45 (binop)]
    '+'            [reduce using rule 45 (binop)]
    '-'            [reduce using rule 45 (binop)]
    '('            [reduce using rule 45 (binop)]
    ')'            [reduce using rule 45 (binop)]
    ','            [reduce using rule 45 (binop)]
    $default       reduce using rule 45 (binop)

    expr      go to state 94
    binop     go to state 33
    unop      go to state 34
    call      go to state 40
    funCall   go to state 41
    variable  go to state 42
    constant  go to state 43


State 42

   43 expr: variable .

    $default  reduce using rule 43 (expr)


State 43

   44 expr: constant .
